--- a/BuggerExample/Base.lproj/Main.storyboard
+++ b/BuggerExample/Base.lproj/Main.storyboard
@@ -1,48 +1,155 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aTa-zl-phL">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="JBa-gb-tXD">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BuggerExample" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aTa-zl-phL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cbb-mV-wNC">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6GB-6N-nOs" kind="relationship" relationship="rootViewController" id="TpY-rc-ExD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xoc-Qv-b8r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-450" y="-641"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="ufG-fk-n3Y">
+            <objects>
+                <tableViewController id="6GB-6N-nOs" customClass="TableViewController" customModule="BuggerExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="eHO-aE-TmT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <sections>
+                            <tableViewSection id="RWe-T7-gDb">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="o1X-Kx-Ckd" style="IBUITableViewCellStyleDefault" id="qTG-ja-u5f">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qTG-ja-u5f" id="KZF-7D-Mfi">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="GItHub" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="o1X-Kx-Ckd">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="zku-Pt-uhz" kind="show" identifier="GitHub" id="Ohh-SA-77o"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="0DV-c2-k44" style="IBUITableViewCellStyleDefault" id="cWD-FK-khH">
+                                        <rect key="frame" x="0.0" y="93.5" width="375" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cWD-FK-khH" id="CLg-gv-kBi">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Linear" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0DV-c2-k44">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="zku-Pt-uhz" kind="show" identifier="Linear" id="DH1-Qr-QaU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="6GB-6N-nOs" id="PVo-yt-dGJ"/>
+                            <outlet property="delegate" destination="6GB-6N-nOs" id="xxh-fu-Fol"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="23c-In-WcY"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BhO-9W-GZf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="410" y="-642"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="iaX-gN-r1n">
+            <objects>
+                <viewController id="zku-Pt-uhz" customClass="ViewController" customModule="BuggerExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2ah-97-mdp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, World!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7f-QB-FMT">
-                                <rect key="frame" x="138" y="333" width="98" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a81-R5-N3B">
-                                <rect key="frame" x="171" y="399" width="33" height="30"/>
-                                <state key="normal" title="Stub"/>
-                                <connections>
-                                    <action selector="stub" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qdb-0O-NWS"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jhC-aB-k2q">
+                                <rect key="frame" x="126.5" y="312.5" width="122" height="106"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shake to report!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vCa-Wy-ANL">
+                                        <rect key="frame" x="0.0" y="0.0" width="122" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vyw-E0-3Bd">
+                                        <rect key="frame" x="0.0" y="71" width="122" height="35"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Stub"/>
+                                        <connections>
+                                            <action selector="stub" destination="zku-Pt-uhz" eventType="touchUpInside" id="Ln4-Kg-Tgl"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="vCa-Wy-ANL" firstAttribute="top" secondItem="jhC-aB-k2q" secondAttribute="top" id="80H-eI-kCn"/>
+                                    <constraint firstItem="Vyw-E0-3Bd" firstAttribute="centerX" secondItem="jhC-aB-k2q" secondAttribute="centerX" id="B72-9b-wry"/>
+                                    <constraint firstItem="Vyw-E0-3Bd" firstAttribute="top" secondItem="vCa-Wy-ANL" secondAttribute="bottom" constant="50" id="RfU-aT-kmP"/>
+                                    <constraint firstItem="vCa-Wy-ANL" firstAttribute="leading" secondItem="jhC-aB-k2q" secondAttribute="leading" id="VLB-ug-MP3"/>
+                                    <constraint firstAttribute="bottom" secondItem="Vyw-E0-3Bd" secondAttribute="bottom" id="tDg-Ks-Tca"/>
+                                    <constraint firstItem="Vyw-E0-3Bd" firstAttribute="leading" secondItem="jhC-aB-k2q" secondAttribute="leading" id="veN-Pt-iUN"/>
+                                    <constraint firstItem="vCa-Wy-ANL" firstAttribute="centerX" secondItem="jhC-aB-k2q" secondAttribute="centerX" id="yfy-HR-1mV"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Dlp-hN-hXH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="q7f-QB-FMT" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Ytu-Xm-qTp"/>
-                            <constraint firstItem="a81-R5-N3B" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ywt-Ux-c5H"/>
-                            <constraint firstItem="q7f-QB-FMT" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ZEe-SI-AwS"/>
-                            <constraint firstItem="a81-R5-N3B" firstAttribute="top" secondItem="q7f-QB-FMT" secondAttribute="bottom" constant="45" id="x4J-de-hYq"/>
+                            <constraint firstItem="jhC-aB-k2q" firstAttribute="centerX" secondItem="Dlp-hN-hXH" secondAttribute="centerX" id="6KK-ZD-QHz"/>
+                            <constraint firstItem="jhC-aB-k2q" firstAttribute="centerY" secondItem="Dlp-hN-hXH" secondAttribute="centerY" id="ETu-gq-kGa"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="RIc-5C-2Uq"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xsI-d6-huG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1237.5999999999999" y="-642.72863568215894"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Ohh-SA-77o"/>
+    </inferredMetricsTieBreakers>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
